--- a/portfolio-template-basic/index.html
+++ b/portfolio-template-basic/index.html
@@ -98,13 +98,13 @@
               <div class="skill-body">
                 <h3 class="skill-name">JavaScript/TypeScript/Vue.js</h3>
                 <p class="skill-text">
-                  実務でも経験はありますたVueCliを用いたアプリの作成とルーティングなど基礎的なことができます。最近は力を入れて勉強している分野の一つでもあります。</p>
+                  実務でも経験はありますがVueCliを用いたアプリの作成とルーティングなど基礎的なことができます。最近は力を入れて勉強している分野の一つでもあります。</p>
               </div>
             </div>
             <div class="skill-item">
               <!-- <p class="skill-img"><img src="img/icon_skill.png" alt=""></p> -->
               <div class="skill-body">
-                <h3 class="skill-name">RUby on Rails</h3>
+                <h3 class="skill-name">Ruby on Rails</h3>
                 <p class="skill-text">
                   基礎的なアプリの作成ができます。ASP.NETやLaravelと同じように深く理解し開発できるように最近は力を入れて勉強している分野の一つです。
                 </p>
@@ -143,7 +143,11 @@
             </p>
             <div class="profile-body">
               <p>
-                マリオブラザーズが生まれた辺りの年に麻生太郎元総理大臣の誕生日前日に生まれたエンジニアです。大学では情報工学を学び、SIerで大手金融機関のシステム開発を約５年ほど従事、その後スタートアップ企業でAzureとASP.netを中心にwebシステムの開発を約５年以上しています。.Netを中心にインフラからフロントサイトまで広く浅く経験してきました。これからは深く開発に従事しプロダクトオーナーやテックリードなどのポジション目指して日夜技術を磨く日々をおくってます。
+                マリオブラザーズが生まれた辺りの年に麻生太郎元総理大臣の誕生日前日に生まれたエンジニアです。大学では情報工学を学び、SIerで大手金融機関のシステム開発を約５年ほど従事、その後スタートアップ企業でAzureとASP.netを中心にwebシステムの開発を約５年以上しています。.Netを中心にインフラからフロントサイトまで広く浅く経験してきました。これからは深く開発に従事しプロダクトオーナーやテックリードなどのポジション目指して日夜技術を磨く日々を送っていきたいと思ってます。
+              </p>
+
+              <p>
+                趣味は動画鑑賞と温泉巡りと海外旅行です。
               </p>
             </div>
           </div>
@@ -171,7 +175,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="copyright">&copy;TNK Production</div>
+      <div class="copyright">&copy;TNK Production Co.</div>
     </footer>
     <!-- /footer -->
 
